syntax = "proto3";

package stubs.v1;

import "buf/validate/validate.proto";
import "google/protobuf/any.proto";

message Stub {
  StubRef ref = 1 [(buf.validate.field).required = true];
  oneof content {
    bytes proto = 2;
    string json = 3;
    Error error = 4;
  }
  repeated string cel_rules = 5;
}

message StubRef {
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 2,
    (buf.validate.field).string.max_len = 200
  ];

  string target = 2;
}

message Error {
  ErrorCode code = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).enum = {
      defined_only: true
      not_in: [0]
    }
  ];
  string message = 2;
  repeated google.protobuf.Any details = 3;
}

enum ErrorCode {
  ERROR_CODE_OK_UNSPECIFIED = 0;
  ERROR_CODE_CANCELLED = 1;
  ERROR_CODE_UNKNOWN = 2;
  ERROR_CODE_INVALID_ARGUMENT = 3;
  ERROR_CODE_DEADLINE_EXCEEDED = 4;
  ERROR_CODE_NOT_FOUND = 5;
  ERROR_CODE_ALREADY_EXISTS = 6;
  ERROR_CODE_PERMISSION_DENIED = 7;
  ERROR_CODE_RESOURCE_EXHAUSTED = 8;
  ERROR_CODE_FAILED_PRECONDITION = 9;
  ERROR_CODE_ABORTED = 10;
  ERROR_CODE_OUT_OF_RANGE = 11;
  ERROR_CODE_UNIMPLEMENTED = 12;
  ERROR_CODE_INTERNAL = 13;
  ERROR_CODE_UNAVAILABLE = 14;
  ERROR_CODE_DATA_LOSS = 15;
  ERROR_CODE_UNAUTHENTICATED = 16;
}
